--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 torch>=1.12
 transformers>=4.25.1
-tokenizers
+tokenizers>=0.13.1
 parallelformers==1.2.7
-accelerate
+accelerate>=0.14.0
 markdown>=3.4
 bleach>=1.16
-psutil
+psutil>=5.9.3
